@@ -23,23 +23,23 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install xvfb qt5-default opencl-headers ocl-icd-opencl-dev
+        python -m pip install --upgrade pip
+    - name: Lint with flake8
+      run: |
+        python -m pip install flake8
+        # stop the build if there are Python syntax errors or undefined names
+        flake8 --ignore=F401,W504 --count --show-source --statistics --exclude=refnx/_lib/emcee,refnx/reflect/_app/resources_rc.py refnx
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
         python -m pip install wheel
         python -m pip install numpy scipy h5py cython pandas xlrd flake8 pytest ipywidgets IPython matplotlib traitlets pyqt5
         python -m pip install uncertainties ptemcee corner tqdm pytest-qt periodictable pyopencl
         pip install git+https://github.com/pymc-devs/pymc3
-    - name: Lint with flake8
-      run: |
-        pip install flake8
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 --ignore=F401,W504 --count --show-source --statistics --exclude=refnx/_lib/emcee,refnx/reflect/_app/resources_rc.py refnx
     - name: Test with pytest
       env:
         MPLBACKEND: agg
       run: |
-        python -m pip install .
+        python -m pip install -e .
         python -m pip install pytest
         # uses xvfb for GUI part of the test
         xvfb-run pytest
@@ -100,8 +100,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        python -m pip install wheel
         pip install numpy scipy h5py cython pandas xlrd pytest ipywidgets IPython matplotlib traitlets pyqt5
-        pip install uncertainties ptemcee corner tqdm pytest-qt periodictable wheel delocate pyopencl
+        pip install uncertainties ptemcee corner tqdm pytest-qt periodictable delocate pyopencl
         pip install git+https://github.com/pymc-devs/pymc3
 
     - name: Make wheel
@@ -116,8 +117,10 @@ jobs:
       env:
         MPLBACKEND: agg
       run: |
-        pip install --only-binary=refnx --no-index --find-links=dist/ refnx
-        pytest
+        pushd dist
+        pip install --only-binary=refnx --no-index --find-links=. refnx
+        pytest --pyargs refnx
+        popd
 
     - name: Make frozen GUI executable
       if: ${{ matrix.python-version == '3.8' }}
