@@ -25,21 +25,24 @@ jobs:
       architecture: 'x64'
 
   - script: |
-      python -m pip install --upgrade pip && pip install numpy scipy cython traitlets ipython ipywidgets pandas h5py xlrd pytest tqdm corner uncertainties matplotlib pyqt5 pytest-qt periodictable
+      python -m pip install --upgrade pip
+      python -m pip install wheel
+      pip install numpy scipy cython traitlets ipython ipywidgets pandas h5py xlrd pytest tqdm corner uncertainties matplotlib pyqt5 pytest-qt periodictable
   # - script: pip install git+https://github.com/pymc-devs/pymc3
 
     displayName: 'Install dependencies'
 
   - script: |
-      pip install .
-      pip install pytest
-      pytest
-    displayName: 'pytest'
+      python setup.py bdist_wheel
+    displayName: 'make wheel'
 
   - script: |
-      pip install wheel
-      python setup.py bdist_wheel
-    displayName: 'wheel'
+      cd dist
+      pip install --only-binary=refnx --no-index --find-links=. refnx
+      pip install pytest
+      pytest --pyargs refnx
+      cd ..
+    displayName: 'pytest'
 
   - script: |
       pip uninstall -y pandas h5py xlrd pytest pytest-qt
