@@ -1,0 +1,3 @@
+[build-system]
+requires = [ "setuptools", "cython", "wheel", "numpy"]
+build-backend = "setuptools.build_meta"
