@@ -1,0 +1,29 @@
+[tox]
+isolated_build=True
+skipsdist=True
+envlist = python
+
+[testenv]
+description = Run the tests under {basepython}
+deps=
+    cython
+    numpy
+    pytest
+    scipy
+    pandas
+    pyqt5
+    periodictable
+    matplotlib
+    traitlets
+    ipywidgets
+    h5py
+    uncertainties
+    corner
+    xlrd
+    pytest-qt
+    pyopencl
+    tqdm
+    ptemcee
+commands =
+    {basepython} setup.py develop
+    {basepython} -c "import refnx;refnx.test()"
